# gotong-royong

./: .dockerignore  .gitignore  Cargo.toml  DOCUMENTATION-SUMMARY.md  Dockerfile.api  Dockerfile.worker  PLAN.md  README.md  compose.dev.yaml  history.txt  justfile
.github/workflows/: ci.yml
.serena/: project.yml
apps/web/: .env.example  .gitignore  .prettierignore  README.md  after-avatar-click.yml  aku-fresh.yml  card-clicked.yml  context-state.yml  ctx-open.yml  ctx2.yml  eslint.config.js  feed-state.yml  fresh-page.yml  fresh2.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  reloaded.yml  vite.config.ts  vitest.config.ts
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs  middleware.rs  observability.rs  request_repos.rs  state.rs  tests.rs  validation.rs
crates/api/src/routes/: edgepod.rs  mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: adaptive_path.rs  auth.rs  chat.rs  contributions.rs  discovery.rs  error.rs  evidence.rs  idempotency.rs  identity.rs  jobs.rs  lib.rs  mode.rs  moderation.rs  ontology.rs  ranking.rs  siaga.rs  transitions.rs  util.rs  vault.rs  vouches.rs  webhook.rs
crates/domain/src/ports/: adaptive_path.rs  chat.rs  contributions.rs  db.rs  discovery.rs  evidence.rs  group.rs  idempotency.rs  jobs.rs  mod.rs  moderation.rs  ontology.rs  siaga.rs  transitions.rs  vault.rs  vouches.rs  webhook.rs
crates/domain/tests/: idempotency.rs
crates/infra/: Cargo.toml
crates/infra/src/: auth.rs  config.rs  idempotency.rs  jobs.rs  lib.rs  logging.rs  markov_client.rs
crates/infra/src/db/: mod.rs
crates/infra/src/repositories/: adaptive_path.rs  chat.rs  contribution.rs  discovery.rs  evidence.rs  group.rs  impls.rs  mod.rs  moderation.rs  ontology.rs  siaga.rs  vault.rs  vouch.rs  webhook.rs  witness.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs  observability.rs
database/: MIGRATION-STATE.md
database/checks/: 0001_initial_schema_check.surql  0002_chat_indexes_check.surql  0003_permissions_private_channels_check.surql  0004_transition_prereq_check.surql  0005_moderation_check.surql  0006_vault_check.surql  0007_siaga_check.surql  0008_discovery_check.surql  0009_audit_retention_fields_check.surql  0010_contributions_evidence_vouch_check.surql  0011_webhook_outbox_check.surql  0012_adaptive_path_check.surql  0013_ontology_schema_check.surql  0016_add_mode_fields_check.surql  0017_path_plan_action_type_check.surql  0018_auth_schema_check.surql  0019_record_permissions_check.surql  0021_chat_optional_datetimes_check.surql  0022_auth_token_permissions_fix_check.surql  0023_enrichment_indexes_check.surql  0024_discovery_payload_flexible_check.surql  0025_hot_path_pack_a_indexes_check.surql  0026_hot_path_pack_b_indexes_check.surql  0027_hot_path_pack_c_feed_participant_edge_check.surql  0028_chat_message_request_index_order_check.surql  0029_group_read_model_schema_check.surql  0030_webhook_payload_flexible_check.surql  0031_feed_preference_schema_check.surql
database/migrations/: 0001_initial_schema.surql  0002_chat_indexes.surql  0003_permissions_private_channels.surql  0004_moderation_schema.surql  0006_vault_schema.surql  0007_siaga_schema.surql  0008_discovery_schema.surql  0009_audit_retention_fields.surql  0010_contributions_evidence_vouch_schema.surql  0011_webhook_outbox_schema.surql  0012_adaptive_path_schema.surql  0013_ontology_schema.surql  0014_remove_track_state_transition.surql  0014_witness_graph_schema.surql  0015_discovery_drop_track_stage.surql  0016_add_mode_fields.surql  0017_path_plan_action_type.surql  0018_auth_schema.surql  0019_record_permissions.surql  0020_auth_access_overwrite.surql  0021_chat_optional_datetimes.surql  0022_auth_token_permissions_fix.surql  0023_enrichment_indexes.surql  0024_discovery_payload_flexible.surql  0025_hot_path_pack_a_indexes.surql  0026_hot_path_pack_b_indexes.surql  0027_hot_path_pack_c_feed_participant_edge.surql  0028_chat_message_request_index_order.surql  0029_group_read_model_schema.surql  0030_webhook_payload_flexible.surql  0031_feed_preference_schema.surql
deploy/monitoring/: README.md  grafana-pack-c-cutover-dashboard.json  prometheus.dev.yml  prometheusrule-chat-attachment-lifecycle.yaml  prometheusrule-pack-c-stage-a.yaml  prometheusrule-pack-c-stage-b.yaml  prometheusrule-pack-c-stage-c.yaml
docs/: DESIGN-INDEX.md  README.md  WITNESS_IMPLEMENTATION_GUIDE.md  backend-research.md
docs/api/: authentication.md  error-handling.md  event-payloads.md  user-auth.md  webhook-spec.md
docs/architecture/: data-flow.md  hot-path-api-shapes.md  integration-architecture.md  ontology-enrichment-guardrails.md  system-overview.md  tandang-endpoint-map.md  tandang-endpoints-openapi-inventory.md  tandang-full-integration.md  tandang-gameplay-rules.md  tandang-integration-gap-tracker.md  tandang-read-cache-policy.md  tandang-signal-mapping.md
docs/archive/: README.md
docs/database/: hot-path-pack-c-feed-participant-edge-design-v1.md  hot-path-query-shape-slo-matrix.md  hot-path-read-model-design-v1.md  migrations.md  schema-requirements.md  surrealdb-v3-feature-audit-benchmark-matrix.md
docs/deployment/: chat-attachment-storage-lifecycle-runbook.md  feed-involvement-fallback-alert-thresholds.md  feed-involvement-fallback-removal-runbook.md  feed-participant-edge-backfill.md  frontend-live-cutover-runbook.md  infrastructure.md  monitoring.md  ontology-feed-expiry-backfill.md  rollback-rehearsal-runbook.md  security-checklist.md  tandang-integration-config.md  tandang-observability-slos.md  webhook-backfill-replay.md
docs/design/: README.md  backend-design-contract-gotong-tandang.md
docs/development/: frontend-foundation.md  local-development.md  setup-guide.md  testing-integration.md
docs/por-evidence/: evidence-format.md  storage-requirements.md  validation-rules.md
docs/research/: README.md  (+49 more)
scripts/: release-gates-surreal.sh  surrealdb-chat-bench.sh  surrealdb-feed-index-bench.sh  surrealdb-feed-involvement-bench.sh  surrealdb-go-no-go.sh  surrealdb-live-db-probe.sh  surrealdb-notification-bench.sh
(+526 files in other folders)
