[workspace]
members = [
  "crates/api",
  "crates/domain",
  "crates/infra",
  "crates/worker",
]
default-members = ["crates/api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
config = "0.14"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
tower_governor = "0.4"
governor = "0.6"
jsonwebtoken = "9"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
surrealdb = "=3.0.0-beta.4"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "request-id", "timeout", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }
validator = { version = "0.18", features = ["derive"] }
time = "=0.3.36"
