[package]
name = "gotong-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower_governor.workspace = true
governor.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
validator.workspace = true

gotong-domain = { path = "../domain" }
gotong-infra = { path = "../infra" }

[dev-dependencies]
tower-util = { package = "tower", version = "0.5", features = ["util"] }
