[package]
name = "gotong-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
rusty-s3.workspace = true
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
redis.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower_governor.workspace = true
governor.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
validator.workspace = true

gotong-domain = { path = "../domain" }
gotong-infra = { path = "../infra" }

[dev-dependencies]
tower-util = { package = "tower", version = "0.5", features = ["util"] }
