[package]
name = "gotong-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
time = { workspace = true, features = ["parsing", "formatting"] }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
