[package]
name = "gotong-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
surrealdb.workspace = true
surrealdb-types.workspace = true
time.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

gotong-domain = { path = "../domain" }
